--- a/src/components/common/css/common.css
+++ b/src/components/common/css/common.css
@@ -1,4 +1,4 @@
-@import url(../base.css);
+@import url(../../../css/base.css);
 @media screen and (min-width: 320px) {
   html {
     font-size: 42.66667px; } }
@@ -49,10 +49,10 @@
         width: 0.5rem;
         height: 0.5rem; }
     .syh_menu li .syh_home_icons {
-      background: url("../../images/syh_home.png") no-repeat center/cover; }
+      background: url("../images/syh_home.png") no-repeat center/cover; }
     .syh_menu li .syh_ind_icons {
-      background: url("../../images/syh_ind.png") no-repeat center/cover; }
+      background: url("../images/syh_ind.png") no-repeat center/cover; }
     .syh_menu li .syh_display_icons {
-      background: url("../../images/syh_display.png") no-repeat center/cover; }
+      background: url("../images/syh_display.png") no-repeat center/cover; }
     .syh_menu li .syh_person_icons {
-      background: url("../../images/syh_person.png") no-repeat center/cover; }
+      background: url("../images/syh_person.png") no-repeat center/cover; }
