--- a/src/components/person/css/syh_person.css
+++ b/src/components/person/css/syh_person.css
@@ -1,3 +1,32 @@
+@import url(../../../css/base.css);
+@media screen and (min-width: 320px) {
+  html {
+    font-size: 42.66667px; } }
+
+@media screen and (min-width: 360px) {
+  html {
+    font-size: 48px; } }
+
+@media screen and (min-width: 365px) {
+  html {
+    font-size: 48.66667px; } }
+
+@media screen and (min-width: 375px) {
+  html {
+    font-size: 50px; } }
+
+@media screen and (min-width: 412px) {
+  html {
+    font-size: 54.93333px; } }
+
+@media screen and (min-width: 414px) {
+  html {
+    font-size: 55.2px; } }
+
+@media screen and (min-width: 750px) {
+  html {
+    font-size: 100px; } }
+
 body {
   width: 100%;
   height: 100vh;
@@ -6,4 +35,36 @@ body {
 .syh_person_banner {
   width: 100%;
   height: 3.42rem;
-  background: url("../images/syh_persontop.png") no-repeat center/cover; }
+  background: url("../images/syh_persontop.png") no-repeat center/cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+  .syh_person_banner .syh_person_tx {
+    width: 2.12rem;
+    height: 2.11rem;
+    background: url("../images/syh_person_nottx.png") no-repeat center/cover; }
+  .syh_person_banner .syh_login_register {
+    width: 1.95rem;
+    height: 0.44rem;
+    margin-top: 0.3rem;
+    display: flex; }
+    .syh_person_banner .syh_login_register li {
+      width: 50%;
+      height: 100%; }
+      .syh_person_banner .syh_login_register li:nth-child(1) {
+        border-right: 0.01rem solid #fff; }
+      .syh_person_banner .syh_login_register li a {
+        display: block;
+        width: 100%;
+        height: 100%;
+        font-size: 0.3rem;
+        color: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: space-around; }
+      .syh_person_banner .syh_login_register li span {
+        display: block;
+        width: 0.07rem;
+        height: 0.07rem;
+        background: url("../images/syh_juhao.png") no-repeat center/cover; }
